<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/play_header">

        <EditTextPreference
            app:defaultValue="1.0"
            app:key="speed"
            app:title="@string/speed_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="60"
            app:key="time"
            app:title="@string/time_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="delay"
            app:title="@string/delay_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="1.0"
            app:key="addOnCorrect"
            app:title="@string/addOnCorrect_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>